--- a/Moxie/Moxie.Master
+++ b/Moxie/Moxie.Master
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>:: Moxie ::</title>
+<title>Moxie Devices: Innovative solutions for LED Lighting, LED Driver, Solar and Renewable Energy, Power Backup, Consumer Electronics</title>
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 
     <!--[if lt IE 7]>
@@ -17,7 +17,7 @@
 <body>
 <div class="main">
 <div class="header">
-<div class="logo left"><a href="index.html" title="Movxie"><img src="~/images/logo-trans.png"  alt="Movxie" runat="server" /></a></div>
+<div class="logo left"><a href="~/" title="Moxie" runat="server"><img src="~/images/logo-trans.png"  alt="Moxie" runat="server" /></a></div>
 <div class="top_link right">
 <a href="~" title="Home"  runat="server">Home</a><span>|</span><a href="~/aboutus" title="Company" runat="server" >Company</a><span>|</span><a href="~/products/" title="Products"  runat="server">Products</a><span>|</span><a href="~/ContactUs" title="Contact"  runat="server">Contact</a>
 </div>
