--- a/Moxie/css/style.css
+++ b/Moxie/css/style.css
@@ -222,3 +222,37 @@ a.sitemap-home:hover   { color:#333333;}
 .contact-form input[type=submit]:active { background:#007515; }
 .red { color:Red;}
 
+/*  Category Block   */
+.content_inr{ width:940px; margin-top:30px;}
+.container_block{border-right:solid 1px #d4d4d4; display:block; width:732px; margin-top:30px;}
+.category_block{ width:716px; margin:0px 16px 0px 16px;}
+.category_block h1{color:#2a8816; font: normal 20px/24px 'OpenSansRegular', Arial, sans-serif; text-transform:uppercase; padding:0px 0 24px 0;}
+.product_block{ width:121px; margin:0 55px 0 0; font-family:Arial, Helvetica, sans-serif; color:#6b6b6b; font-size:12px; line-height:20px;}
+.product_block img{ border:0px;}
+.product_block h1{color:#2a8816; font: normal 16px/24px 'OpenSansRegular', Arial, sans-serif; text-transform:uppercase; padding:14px 0 8px 0;}
+.product_block h1 a{color:#2a8816; text-decoration:none;}
+.view_all{color:#ffffff; background:#4d9b11; cursor:pointer; text-transform:uppercase; display:block; font-size:12px; text-align:center; padding:7px; text-decoration:none; margin:10px 55px 0 0; }
+.divider{ width:677px;;  border-bottom:solid 1px #d4d4d4; display:block; height:3px; margin:8px 0 25px 0;}
+.inr_navigation{width:160px; padding-left:35px; margin-top:26px;}
+.inr_navigation h1{font-family:Arial, Helvetica, sans-serif;color:#696363; text-transform:uppercase; font-weight:normal; font-size:14px; margin-bottom:5px;}
+.link{margin:5px 0 20px 0px;}
+.link a{ background:url(../images/arrow-trans.png) no-repeat left 5px; padding-left:10px; text-decoration:none; color:#509e0d; font-size:12px; margin:0px 0px 10px 18px;}
+.link a:hover{text-decoration:none;}
+.details{color:#ffffff; background:#4d9b11; cursor:pointer; text-transform:uppercase; display:block; font-size:12px; text-align:center; padding:3px 7px 3px 7px; text-decoration:none; margin:10px 0 30px 0; width:49px; }
+
+.prduct_details{ width:677px;}
+.prduct_details img{ border:0px; text-align:left; margin-right:54px; width:201px; float:left;}
+.prduct_details h1{color:#000000; text-transform:uppercase; font: normal 20px 'OpenSansRegular', Arial, sans-serif; padding:0px; display:block; }
+.prduct_details .details_info{}
+.prduct_details p{ font-size:11px; color:#6b6b6b; display:block; text-align:left;}
+
+.info_tabs{width:400px; margin-top:30px;}
+.download_datasheet{width:675px; text-align:right;}
+.download_datasheet a{ color:#1684d9; text-decoration:underline;}
+.contactu{ font-size:14px!important; color:#4e9d0e!important;}
+form{ display:block; width:400px; float:left;}
+.input{ background:#fff; padding:2px 0 0 6px; border:solid 1px #9e9e9e; height:26px; width:280px; color:#828282; text-transform:uppercase; margin:10px 4px 10px 4px;}
+.text_area{ background:#fff; padding:2px 0 0 6px; border:solid 1px #9e9e9e; height:26px; width:280px; color:#828282; text-transform:uppercase; margin:10px 4px 10px 4px; height:50px;}
+form label{color:#828282; text-transform:uppercase; margin:15px 30px 15px 0;}
+.label_area{margin:15px 11px 15px 0!important;}
+.submit_btn{ background:#1683d8; color:#fff; display:block; border:0px; cursor:pointer; text-transform:uppercase; width:80px; text-align:center; padding:5px 0 5px 0; margin-left:175px;}
