--- a/Moxie/Products.master
+++ b/Moxie/Products.master
@@ -1,6 +1,10 @@
-﻿<%@ Master Language="C#" MasterPageFile="~/Moxie.Master" AutoEventWireup="true" CodeBehind="Products.master.cs"
+﻿<%@ Master Language="C#" MasterPageFile="~/Master.Master" AutoEventWireup="true" CodeBehind="Products.master.cs"
     Inherits="Moxie.Products" %>
 
+<asp:Content ID="Content2" ContentPlaceHolderID="Head" runat="server">
+    <asp:ContentPlaceHolder ID="Head" runat="server">
+    </asp:ContentPlaceHolder>
+</asp:Content>
 <asp:Content ID="Content1" ContentPlaceHolderID="ContentPlaceHolder1" runat="server">
     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
     </asp:ContentPlaceHolder>
