--- a/Moxie/css/style.css
+++ b/Moxie/css/style.css
@@ -215,12 +215,16 @@ a.sitemap-home:hover   { color:#333333;}
 .contact-form { display:block; float:left; width:600px; margin: 70px 0px 100px 0px; font-family: Arial, Helvetica, sans-serif;font-size: 14px;color: #959595;line-height: 16px;}
 
 
-.contact-form input[type=text]  { width:300px; height:17px; border: solid 1px #ccc; padding: 2px 4px;} 
-.contact-form textarea  { width:300px; height:100px; border: solid 1px #ccc; padding: 2px 4px;} 
+.contact-form input[type=text]  { width:300px; height:17px; border: solid 1px #ccc; padding: 2px 4px; background:white;} 
+.contact-form textarea  { width:300px; height:100px; border: solid 1px #ccc; padding: 2px 4px; background:white;} 
 .contact-form input[type=submit] { background:#007515; padding:5px 10px; font-size: 17px; font-weight: bold; color:#fff;}
 .contact-form input[type=submit]:hover { background:#4e9d10; }
 .contact-form input[type=submit]:active { background:#007515; }
 .red { color:Red;}
+
+
+
+
 
 /*  Category Block   */
 .content_inr{ width:940px; margin-top:30px;}
@@ -239,20 +243,22 @@ a.sitemap-home:hover   { color:#333333;}
 .link a{ background:url(../images/arrow-trans.png) no-repeat left 5px; padding-left:10px; text-decoration:none; color:#509e0d; font-size:12px; margin:0px 0px 10px 18px;}
 .link a:hover{text-decoration:none;}
 .details{color:#ffffff; background:#4d9b11; cursor:pointer; text-transform:uppercase; display:block; font-size:12px; text-align:center; padding:3px 7px 3px 7px; text-decoration:none; margin:10px 0 30px 0; width:49px; }
-
 .prduct_details{ width:677px;}
 .prduct_details img{ border:0px; text-align:left; margin-right:54px; width:201px; float:left;}
-.prduct_details h1{color:#000000; text-transform:uppercase; font: normal 20px 'OpenSansRegular', Arial, sans-serif; padding:0px; display:block; }
+.prduct_details h1{color:#000000; text-transform:uppercase; font: normal 20px 'OpenSansRegular', Arial, sans-serif; padding:0px; display:block; margin-top:20px; margin-bottom:10px;}
 .prduct_details .details_info{}
 .prduct_details p{ font-size:11px; color:#6b6b6b; display:block; text-align:left;}
 
-.info_tabs{width:400px; margin-top:30px;}
+.info_tabs{width:400px; margin-top:30px; }
 .download_datasheet{width:675px; text-align:right;}
 .download_datasheet a{ color:#1684d9; text-decoration:underline;}
 .contactu{ font-size:14px!important; color:#4e9d0e!important;}
 form{ display:block; width:400px; float:left;}
-.input{ background:#fff; padding:2px 0 0 6px; border:solid 1px #9e9e9e; height:26px; width:280px; color:#828282; text-transform:uppercase; margin:10px 4px 10px 4px;}
-.text_area{ background:#fff; padding:2px 0 0 6px; border:solid 1px #9e9e9e; height:26px; width:280px; color:#828282; text-transform:uppercase; margin:10px 4px 10px 4px; height:50px;}
+.input{ background:#fff; padding:2px 0 0 6px; border:solid 1px #ccc; height:20px; width:280px; color:#828282; text-transform:uppercase; margin:4px;}
+.text_area{ background:#fff; padding:2px 0 0 6px; border:solid 1px #ccc; height:26px; width:280px; color:#828282; text-transform:uppercase; margin:4px; height:50px;}
 form label{color:#828282; text-transform:uppercase; margin:15px 30px 15px 0;}
 .label_area{margin:15px 11px 15px 0!important;}
-.submit_btn{ background:#1683d8; color:#fff; display:block; border:0px; cursor:pointer; text-transform:uppercase; width:80px; text-align:center; padding:5px 0 5px 0; margin-left:175px;}
+.submit_btn{ background:#1683d8; color:#fff; display:block; border:0px; cursor:pointer; text-transform:uppercase; width:80px; text-align:center; padding:5px 0 5px 0; margin-left:175px; margin-top:10px;}
+
+
+.product-form { width:400px; display:block; float:right;  }
