--- a/Moxie/FinalProduct.master
+++ b/Moxie/FinalProduct.master
@@ -22,10 +22,12 @@
                     <img id="Img1" runat="server" width="201" height="371" />
                     <div class="details_info">
                         <h1>
+                            <asp:Label ID="lname" runat="server"></asp:Label>
                             <asp:ContentPlaceHolder ID="ProductName" runat="server">
                             </asp:ContentPlaceHolder>
                         </h1>
                         <p>
+                            <asp:Label ID="lsummary" runat="server"></asp:Label>
                             <asp:ContentPlaceHolder ID="ProductSummary" runat="server">
                             </asp:ContentPlaceHolder>
                         </p>
@@ -38,10 +40,12 @@
                             <div style="border: 1px solid #4e9d0e; border-left: 0px; border-right: 0px; width: 400px;
                                 margin-bottom: 1em; padding: 15px 10px 15px 10px; background: #fff;">
                                 <div id="country1" class="tabcontent">
+                                    <asp:Label ID="lfeatures" runat="server"></asp:Label>
                                     <asp:ContentPlaceHolder ID="ProductFeatures" runat="server">
                                     </asp:ContentPlaceHolder>
                                 </div>
                                 <div id="country2" class="tabcontent">
+                                    <asp:Label ID="lapplication" runat="server"></asp:Label>
                                     <asp:ContentPlaceHolder ID="ProductApplication" runat="server">
                                     </asp:ContentPlaceHolder>
                                 </div>
@@ -57,23 +61,90 @@
                         </div>
                         <div class="download_datasheet">
                             <asp:HyperLink ID="DataSheetLink" CssClass="download_datasheet" runat="server" />
-                            <!--<a href=datasheetlink>Download detailed datasheet</a></div>-->
-                            <h1 class="contactu">
-                                Contact us for this product</h1>
-                            <div class="product-form">
-                                <!--form action="" method="get"-->
-                                <label>
-                                    Name</label>
-                                <input name="contact_name" class="input" type="text" /><br />
-                                <label >
-                                    Email</label>
-                                <input name="contact_email" type="text" class="input" /><br />
-                                <label class="label_area left">
-                                    Message</label>
-                                <textarea name="" cols="" rows="" class="text_area"></textarea>
-                                <input name="" value="Submit" type="submit" class="submit_btn" />
-                                <!--/form-->
-                            </div>
+                        </div>
+                        <!--<a href=datasheetlink>Download detailed datasheet</a></div>-->
+                        <div class="contact-form">
+                            <table cellpadding="0" cellspacing="10" border="0">
+                                <tr>
+                                    <td colspan="3" align="center">
+                                        <h1 class="contactu">
+                                            Contact us for this product
+                                        </h1>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="right" width="150">
+                                        Name <span class="red">*</span>
+                                    </td>
+                                    <td>
+                                        <asp:TextBox ID="txtName" runat="server"></asp:TextBox>
+                                    </td>
+                                    <td>
+                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator1" runat="server" ErrorMessage="* Required"
+                                            ControlToValidate="txtName"> </asp:RequiredFieldValidator>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="right">
+                                        Email Address <span class="red">*</span>
+                                    </td>
+                                    <td>
+                                        <asp:TextBox ID="txtEmail" runat="server"></asp:TextBox>
+                                    </td>
+                                    <td>
+                                        <asp:RegularExpressionValidator ID="RequiredFieldValidator2" runat="server" ErrorMessage="Invalid Email Address"
+                                            ControlToValidate="txtEmail" ValidationExpression="\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*"></asp:RegularExpressionValidator>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="right">
+                                        Phone
+                                    </td>
+                                    <td>
+                                        <asp:TextBox ID="txtPhone" runat="server"></asp:TextBox>
+                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator3" runat="server" ErrorMessage="* Required"
+                                            ControlToValidate="txtPhone"> </asp:RequiredFieldValidator>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td align="right">
+                                        Message
+                                    </td>
+                                    <td>
+                                        <asp:TextBox ID="txtMessage" TextMode="MultiLine" runat="server"></asp:TextBox>
+                                        <asp:RequiredFieldValidator ID="RequiredFieldValidator4" runat="server" ErrorMessage="* Required"
+                                            ControlToValidate="txtMessage"> </asp:RequiredFieldValidator>
+                                    </td>
+                                    <td>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td colspan="3">
+                                        <asp:Label ID="lblStatus" runat="server"></asp:Label>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                    </td>
+                                    <td align="center">
+                                        <asp:Button ID="btnSendmail" runat="server" Text="Send Mail" OnClick="btnSendmail_Click" />
+                                    </td>
+                                    <td>
+                                    </td>
+                                </tr>
+                            </table>
+                            <!--form action="" method="get">
+                            <label>
+                                Name</label>
+                            <input name="contact_name" class="input" type="text" /><br />
+                            <label>
+                                Email</label>
+                            <input name="contact_email" type="text" class="input" /><br />
+                            <label class="label_area left">
+                                Message</label>
+                            <textarea name="" cols="" rows="" class="text_area"></textarea>
+                            <input name="" value="Submit" type="submit" class="submit_btn" />
+                            </form-->
                         </div>
                         <div class="clear">
                         </div>
