updated link names
Signed-off-by: Ajay <ajay@moxiedevices.com>

--- a/Moxie/Master.Master
+++ b/Moxie/Master.Master
@@ -24,7 +24,7 @@
             <div class="top_link right">
                 <a href="~/" title="Home" runat="server">Home</a><span>|</span><a href="~/aboutus"
                     title="Company" runat="server">Company</a><span>|</span><a href="~/products/" title="Products"
-                        runat="server">Products</a><span>|</span><a href="~/products/Custom Solutions and Consultancy/" title="Services" runat="server">Services</a><span>|</span><a href="~/ContactUs" title="Contact" runat="server">Contact</a>
+                        runat="server">Products</a><span>|</span><a href="~/products/Custom-Solutions-and-Consultancy/" title="Services" runat="server">Services</a><span>|</span><a href="~/ContactUs" title="Contact" runat="server">Contact</a>
             </div>
         </div>
         <div class="clear">
