--- a/Moxie/ProductLayer2.master
+++ b/Moxie/ProductLayer2.master
@@ -36,30 +36,42 @@
                 </asp:Repeater>
                 <asp:Repeater ID="product" runat="server">
                     <HeaderTemplate>
+                        <table>
                     </HeaderTemplate>
                     <ItemTemplate>
-                        <div class="product_block left">
-                            <a id="p11" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>'
-                                runat="server">
-                                <img id="p11img" src='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["IMAGE"].InnerText)%>'
-                                    width="121" height="155" runat="server" /></a>
-                            
-                                <a id="p11name" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>'
-                                    runat="server">
-                                    <h1><%#((System.Xml.XmlNode)Container.DataItem)["NAME"].InnerText%></h1><br /><h3><%#((System.Xml.XmlNode)Container.DataItem)["NAMEADDON"].InnerText%></h3>
-                                </a>
-                            
-                            <p class="right">
-                                <a id="A1" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>'
-                                    runat="server">Details--></a>
-                            </p>
-                            <br />
-                            <%#((System.Xml.XmlNode)Container.DataItem)["SHORTFEATURES"].InnerText%>
-                            <asp:Label ID="p11summary" runat="server" />
-                            <!--<a id="p11details" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>' class="details bottom" runat="server">Details</a>-->
-                        </div>
+                        <%if (node_count % 4 == 0)
+                          {%>
+                        <tr valign="top">
+                            <% 
+                          } %>
+                            <% node_count = node_count + 1;
+                            %>
+                            <td>
+                                <div class="product_block left">
+                                    <a id="p11" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>'
+                                        runat="server">
+                                        <img id="p11img" src='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["IMAGE"].InnerText)%>'
+                                            width="121" height="155" runat="server" /></a> <a id="p11name" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>'
+                                                runat="server">
+                                                <h1>
+                                                    <%#((System.Xml.XmlNode)Container.DataItem)["NAME"].InnerText%></h1>
+                                                <br />
+                                                <h3>
+                                                    <%#((System.Xml.XmlNode)Container.DataItem)["NAMEADDON"].InnerText%></h3>
+                                            </a>
+                                    <p class="right">
+                                        <a id="A1" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>'
+                                            runat="server">Details--></a>
+                                    </p>
+                                    <br />
+                                    <%#((System.Xml.XmlNode)Container.DataItem)["SHORTFEATURES"].InnerText%>
+                                    <asp:Label ID="p11summary" runat="server" />
+                                    <!--<a id="p11details" href='<%#Page.ResolveUrl(((System.Xml.XmlNode)Container.DataItem)["URL"].InnerText)%>' class="details bottom" runat="server">Details</a>-->
+                                </div>
+                            </td>
                     </ItemTemplate>
                     <FooterTemplate>
+                        </table>
                     </FooterTemplate>
                 </asp:Repeater>
             </div>
